--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "dependencies": {
     "@sentry/browser": "^5.27.2",
     "next": "^10.2.3",
+    "next-images": "^1.7.0",
+    "next-react-svg": "^1.1.2",
     "node-sass": "^5.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-helmet": "^6.1.0",
     "react-minimal-pie-chart": "^8.0.1",
     "react-reveal": "^1.2.2",
+    "react-scroll": "^1.8.2",
     "react-slick": "^0.28.1",
     "react-text-loop": "^2.3.0",
     "react-tippy": "^1.4.0",
