--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "@sentry/browser": "^5.27.2",
-    "next": "^10.2.3",
+    "next": "^12.2.5",
     "next-images": "^1.7.0",
     "next-react-svg": "^1.1.2",
     "node-sass": "^5.0.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "react-image-lightbox": "^5.1.1",
     "react-minimal-pie-chart": "^8.0.1",
@@ -23,6 +23,7 @@
     "react-slick": "^0.28.1",
     "react-text-loop": "^2.3.0",
     "react-tippy": "^1.4.0",
+    "sass": "^1.54.8",
     "sass-loader": "^12.0.0"
   },
   "devDependencies": {
