--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
+    "enzyme": "^3.11.0",
     "typescript": "^4.0.5"
   }
 }
