--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:update": "jest --updateSnapshot"
   },
   "dependencies": {
     "@sentry/browser": "^5.27.2",
@@ -27,9 +31,18 @@
     "sass-loader": "^12.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.0.0",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "enzyme": "^3.11.0",
+    "eslint": "^8.23.0",
+    "eslint-config-next": "12.2.5",
+    "eslint-config-prettier": "^8.5.0",
+    "jest": "^29.0.1",
+    "jest-environment-jsdom": "^29.0.1",
+    "prettier": "^2.7.1",
+    "ts-jest": "^28.0.8",
     "typescript": "^4.0.5"
   }
 }
